# fitness-tracker

./: .clipboard.ps1  .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.e2e  Makefile  README.md  docker-compose.single.yml  docker-compose.test.yml  docker-compose.yml  package.json  playwright.config.ts  pnpm-lock.yaml  requirements.md  tsconfig.json  turbo.json  vitest.config.ts
.claude/: agents.md  (+1 more)
backend/: .gitignore  main.py  pyproject.toml  seed_data.py
backend-django/: .gitignore  Dockerfile  Makefile  db.sqlite3  pyproject.toml  pytest.ini  update_presets.py
backend-django/ai/: urls.py  views.py
backend-django/config/: settings.py  urls.py
backend-django/data/: generate.py
backend-django/food/: models.py  serializers.py  urls.py  views.py
backend-django/food/migrations/: 0001_initial.py  0002_initial.py  0003_alter_mealfooditem_options_and_more.py
backend-django/users/: models.py  serializers.py  urls.py  views.py
backend-django/users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_table.py  0003_user_dark_mode.py  0004_exercisesettings.py
backend-django/users/tests/: test_exercise_settings.py
backend-django/workouts/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend-django/workouts/migrations/: 0001_initial.py  0002_workoutpreset_is_public_alter_workoutpreset_user_and_more.py  0003_workoutpreset_day_label_workoutpreset_status_and_more.py  0004_alter_workoutsession_created_at.py  0005_workoutset_bodyweight.py  0006_workoutset_dropdown_weights.py
backend-django/workouts/tests/: test_dropdown_weights.py  test_exercises.py  test_presets.py  test_templates_and_plans.py  test_workout_flow.py
backend/app/core/: config.py  security.py
backend/app/models/: user.py
backend/app/schemas/: __init__.py  auth.py  exercise.py  food.py  workout.py
backend/app/services/: ai_service.py  nutrition.py  workout_calculations.py
backend/tests/: conftest.py
(+246 files in other folders)
